--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ src="https://www.facebook.com/tr?id=1435461760433346&ev=PageView&noscript=1"
     <div class="row h-100">
         <div class="col-md-6 mx-auto text-center">
             <h2 class="header">ASIA'S NO 1 TRADER</h2>
-            <h1 class="main"><i class="fa-solid fa-crown" style="color: rgba(246, 198, 7, 0.947);"></i> 𝗣𝗨𝗦𝗛𝗞𝗔𝗥 𝗥𝗔𝗝 𝗧𝗛𝗔𝗞𝗨𝗥 <i class="fa-solid fa-crown"  style="color: rgba(246, 198, 7, 0.947);"></i></h1>
+            <h1 class="main"><i class="fa-solid fa-crown" style="color: rgba(246, 198, 7, 0.947);"></i> Trade With Sunil <i class="fa-solid fa-crown"  style="color: rgba(246, 198, 7, 0.947);"></i></h1>
             <a href="https://t.me/+FiuEEalMv1ZkMTA1" target="_blank" class="telegram-button">
                 <i class="fa-brands fa-telegram"></i>  
                 JOIN NOW FOR FREE
