--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ src="https://www.facebook.com/tr?id=1201475644423247&ev=PageView&noscript=1"
         <div class="col-md-6 mx-auto text-center">
             <h2 class="header">ASIA'S NO 1 TRADER</h2>
             <h1 class="main"><i class="fa-solid fa-crown" style="color: rgba(246, 198, 7, 0.947);"></i> Trade With Sunil <i class="fa-solid fa-crown"  style="color: rgba(246, 198, 7, 0.947);"></i></h1>
-            <a href="https://t.me/+FiuEEalMv1ZkMTA1" target="_blank" class="telegram-button">
+            <a href="https://t.me/+br_lii9qaC43ZmY1" target="_blank" class="telegram-button">
                 <i class="fa-brands fa-telegram"></i>  
                 JOIN NOW FOR FREE
             </a> 
@@ -45,7 +45,7 @@ src="https://www.facebook.com/tr?id=1201475644423247&ev=PageView&noscript=1"
             <h4 class="otherData"><i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i>Highly Expert In analysing the daily trading Graph <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i></h4>
             <h4 class="otherData"><i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i> 10001 % FREE Reports <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i></h4>
 
-            <a href="https://t.me/+FiuEEalMv1ZkMTA1" target="_blank" class="telegram-button">
+            <a href="https://t.me/+br_lii9qaC43ZmY1" target="_blank" class="telegram-button">
                 <i class="fa-brands fa-telegram"></i> 
                 JOIN US NOW
             </a> 
